--- a/.github/workflows/keep-render-warm.yml
+++ b/.github/workflows/keep-render-warm.yml
@@ -12,13 +12,8 @@ jobs:
       - name: Hit Render health endpoint
         env:
           PING_URL: ${{ secrets.RENDER_PING_URL }}
-          DEFAULT_PING_URL: https://physical-therapy-api.onrender.com/health
+          DEFAULT_PING_URL: https://physical-therapy-api.onrender.com/health/db
         run: |
           URL="${PING_URL:-$DEFAULT_PING_URL}"
-          if [ -z "$URL" ]; then
-            echo "No Render ping URL configured."
-            exit 1
-          fi
-
           echo "Pinging $URL"
           curl --fail --silent --show-error "$URL" > /dev/null || echo "Ping failed but continuing."
